--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,8 +1,14 @@
 <%= @article.title %><br>
 <%= @article.body %><br>
 
+<%= render partial: 'comments/form' %>
+
 <%= link_to "<< back to Articles list", articles_path %><br>
 
 <%= link_to "delete", article_path(@article), method: :delete, data: {confirm: "really delete the article?"} %>
 
 <%= link_to "edit", edit_article_path(@article) %>
+
+<h2>Comments (<%= @article.comments.size %>)</h2>
+
+<%= render partial: 'articles/comment', collection: @article.comments %>
