--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,7 @@
 <%= @article.title %><br>
+<% if @article.image.exists? %>
+  <p><%= image_tag @article.image.url(:medium) %></p>
+<% end  %>
 <p>
   Tags:
   <% @article.tags.each do |tag| %>
